# taskoo

./: .dockerignore  .gitignore  CLI_USAGE.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml
.github/workflows/: rust.yml
taskoo-cli/: Cargo.toml  README.md
taskoo-cli/config/: cli-conf.ini  cli.yml
taskoo-cli/src/: display.rs  error.rs  extra.rs  main.rs  option_parser.rs
taskoo-cli/src/commands/: add.rs  agenda.rs  clean.rs  delete.rs  done.rs  info.rs  list.rs  mod.rs  modify.rs  remove.rs  review.rs  state_changer.rs  view.rs
taskoo-core/: Cargo.toml  README.md  build_wasm.sh
taskoo-core/src/: command.rs  core.rs  error.rs  lib.rs  operation.rs  option_parser.rs  util.rs
taskoo-core/src/db/: add.rs  agenda.rs  delete.rs  get.rs  get_base.rs  mod.rs  modify.rs  query_helper.rs  task_helper.rs  task_manager.rs  view.rs
taskoo-core/src/db/tests/: mod.rs  test_add.rs  test_agenda.rs  test_basic.rs  test_delete.rs  test_get.rs  test_modify.rs  test_view.rs
taskoo-core/src/operation/: add.rs  agenda.rs  delete.rs  get.rs  mod.rs  modify.rs  view.rs
taskoo-core/src/wasm/: exports.rs  helpers.rs  mod.rs
taskoo-web/: README.md
taskoo-web/server/: index.mjs  package.json  server.js
taskoo-web/ui/: consts.mjs  index.html  style.css  utils.js
taskoo-web/webpack-ver/: package-lock.json  package.json  webpack.config.js
taskoo-web/webpack-ver/src/: consts.mjs  index.js  style.css  task_helpers.js  ui_logic.mjs
taskoo-web/webpack-ver/test/: ui_logic.test.mjs
