[package]
name = "taskoo-cli"
version = "0.1.0"
authors = ["Sean Feng <sean@seanfeng.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
taskoo-core = { path = "../taskoo-core" }
comfy-table = "1.3.0"
yansi = "0.5.0"
log = "0.4.0"
env_logger = "0.8.2"
thiserror = "1.0.22"
rust-ini = "0.16.0"
dirs = "3.0"
anyhow = "1.0.37"
shrust = "0.0.7"

[dependencies.tabwriter]
version = "1.2.1"
default-features = true # do not include the default features, and optionally
                         # cherry-pick individual features
features = ["ansi_formatting"]
