[package]
name = "taskoo-cli"
version = "0.1.0"
authors = ["Sean Feng <sean@seanfeng.dev>"]
edition = "2018"

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }

taskoo-core = { path = "../taskoo-core" }
yansi = "0.5.0"
log = "0.4.0"
env_logger = "0.8.2"
thiserror = "1.0.37"
rust-ini = "0.16.0"
dirs = "3.0"
anyhow = "1.0.37"
shrust = "0.0.7"
chrono = "0.4.19"
terminal_size = "0.1.16"
directories = "3.0.1"
ctrlc = { version = "3.0", features = ["termination"] }

# Using this commit allows Confirm prompt to return None
# dialoguer = { git = "https://github.com/mitsuhiko/dialoguer.git", rev = "2c3fe6b64641cfb57eb0e1d428274f63976ec150" }
dialoguer = { version = "0.10.3", features = ["fuzzy-select"] }


[dependencies.tabwriter]
version = "1.2.1"
default-features = true # do not include the default features, and optionally
                         # cherry-pick individual features
features = ["ansi_formatting"]
