[package]
name = "taskoo-core"
version = "0.1.0"
authors = ["Sean Feng <sean@seanfeng.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rusqlite = "0.24.1"
rust-ini = "0.16.0"
dirs = "3.0"
chrono = "0.4.19"
thiserror = "1.0.22"
more-asserts = "0.2.1"
log = "0.4.0"
env_logger = "0.8.2"
anyhow = "1.0.37"
rrule = "0.3.8"

[dependencies.rusqlite]
version = "0.24.1"
default-features = false
features = ["bundled", "array"]
